--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,120 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="400dp"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/corner_background"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topMenu"
-        android:background="@color/purple_700"/>
+        app:layout_constraintTop_toBottomOf="@+id/topMenu">
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#4DFFFFFF"
+            android:text="@string/btn_1"
+            android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#4DFFFFFF"
+            android:text="@string/btn_2"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/button1" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#4DFFFFFF"
+            android:text="@string/btn_3"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/button2" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#4DFFFFFF"
+            android:text="@string/btn_4"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/button3" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#4DFFFFFF"
+            android:text="@string/btn_5"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/button4" />
+
+    </LinearLayout>
+
+
     <FrameLayout
         android:id="@+id/bottomMenu"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/teal_700" />
+        android:background="@color/teal_700"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-    <FrameLayout
+    <androidx.cardview.widget.CardView
         android:id="@+id/topMenu"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/teal_200" />
+        android:layout_height="140dp"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="15dp"
+        tools:ignore="MissingConstraints">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/draw1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/avengers" />
+
+            <ImageView
+                android:id="@+id/draw3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.7"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/jurasicpark" />
+
+            <ImageView
+                android:id="@+id/draw4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.7"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/pulpfiction" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autoLink="web"
+        android:linksClickable="true"
+        android:text="Изображения с: https://www.movieposters.com/"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topMenu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
