--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appTopBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBarMenu"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/settings"
+            app:navigationIcon="@drawable/ic_round_menu_24"
+            app:title="FilmSearch"
+            app:titleTextColor="@color/purple_200" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <LinearLayout
         android:layout_width="400dp"
         android:layout_height="wrap_content"
@@ -15,7 +32,7 @@
         app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topMenu">
+        app:layout_constraintTop_toBottomOf="@+id/filmMenu">
 
         <Button
             android:id="@+id/button1"
@@ -73,18 +90,18 @@
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/topMenu"
+        android:id="@+id/filmMenu"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:layout_margin="10dp"
         app:cardCornerRadius="15dp"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints,NotSibling"
+        app:layout_constraintTop_toBottomOf="@id/appTopBar">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/draw1"
@@ -121,7 +138,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/topMenu" />
+        app:layout_constraintTop_toBottomOf="@id/filmMenu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
