--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/corner_background">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appTopBar"
@@ -20,74 +21,11 @@
             app:menu="@menu/settings"
             app:navigationIcon="@drawable/ic_round_menu_24"
             app:title="FilmSearch"
-            app:titleTextColor="@color/purple_200" />
+            app:titleTextColor="@color/teal_200"
+            android:background="@color/purple_500"
+            app:itemIconTint="@color/teal_200" />
 
     </com.google.android.material.appbar.AppBarLayout>
-
-    <LinearLayout
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/corner_background"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/filmMenu">
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DFFFFFF"
-            android:text="@string/btn_1"
-            android:textSize="20sp"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DFFFFFF"
-            android:text="@string/btn_2"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/button1" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DFFFFFF"
-            android:text="@string/btn_3"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/button2" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DFFFFFF"
-            android:text="@string/btn_4"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/button3" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DFFFFFF"
-            android:text="@string/btn_5"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/button4" />
-
-    </LinearLayout>
-
-
-    <FrameLayout
-        android:id="@+id/bottomMenu"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/teal_700"
-        app:layout_constraintBottom_toBottomOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/filmMenu"
@@ -130,6 +68,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/text_reference"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autoLink="web"
@@ -139,6 +78,76 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/filmMenu" />
+
+    <LinearLayout
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/corner_background"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_reference"
+        android:layout_marginTop="20dp">
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#4DFFFFFF"
+            android:text="@string/menu"
+            android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#4DFFFFFF"
+            android:text="@string/favorites"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/button1" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#4DFFFFFF"
+            android:text="@string/category"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/button2" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#4DFFFFFF"
+            android:text="@string/continue_watching"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/button3" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#4DFFFFFF"
+            android:text="@string/settings"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/button4" />
+
+    </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/purple_500"
+        app:itemTextColor="@color/teal_200"
+        app:itemIconTint="@color/teal_200"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/navigation" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
