--- a/app/src/main/res/drawable/corner_background.xml
+++ b/app/src/main/res/drawable/corner_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:startColor="@android:color/holo_orange_light"
-        android:endColor="@color/cardview_dark_background"
-        android:angle="45"/>
+        android:endColor="#960AB6"
+        android:angle="45" />
     <corners android:radius="15dp"/>
 </shape>
