--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,62 +79,72 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/filmMenu" />
 
-    <LinearLayout
-        android:layout_width="400dp"
+    <GridLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/corner_background"
-        android:orientation="vertical"
+        android:layout_margin="16dp"
+        android:columnCount="2"
+        android:orientation="horizontal"
+        android:useDefaultMargins="true"
+        android:layoutAnimation="@anim/layout_anim"
+        app:layout_constraintTop_toBottomOf="@+id/text_reference"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_reference"
-        android:layout_marginTop="20dp">
+        app:layout_constraintRight_toRightOf="parent">
 
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DFFFFFF"
-            android:text="@string/menu"
-            android:textSize="20sp"
-            app:layout_constraintTop_toTopOf="parent" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/pirates"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="15dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/pirates"
+                android:scaleType="centerCrop"/>
+        </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DFFFFFF"
-            android:text="@string/favorites"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/button1" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/monroe"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="15dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/monroe"
+                android:scaleType="centerCrop"/>
+        </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DFFFFFF"
-            android:text="@string/category"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/button2" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/friends"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="15dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/friends"
+                android:scaleType="centerCrop"/>
+        </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DFFFFFF"
-            android:text="@string/continue_watching"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/button3" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/black_panter"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="15dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/black_panther"
+                android:scaleType="centerCrop"/>
+        </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DFFFFFF"
-            android:text="@string/settings"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/button4" />
-
-    </LinearLayout>
+    </GridLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -149,5 +159,7 @@
 
 
 
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
 
