--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,80 +81,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/filmMenu" />
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:columnCount="2"
-        android:orientation="horizontal"
-        android:useDefaultMargins="true"
-        android:layoutAnimation="@anim/layout_animation"
-        app:layout_constraintTop_toBottomOf="@+id/text_reference"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/pirates"
-            android:layout_width="150dp"
-            android:layout_height="170dp"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp"
-            android:clickable="true"
-            android:stateListAnimator="@animator/press_button_anim">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/pirates"
-                android:scaleType="centerCrop"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/monroe"
-            android:layout_width="150dp"
-            android:layout_height="170dp"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp"
-            android:clickable="true"
-            android:stateListAnimator="@animator/press_button_anim">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/monroe"
-                android:scaleType="centerCrop"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/friends"
-            android:layout_width="150dp"
-            android:layout_height="170dp"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp"
-            android:clickable="true"
-            android:stateListAnimator="@animator/press_button_anim">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/friends"
-                android:scaleType="centerCrop"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/blackPanter"
-            android:layout_width="150dp"
-            android:layout_height="170dp"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp"
-            android:clickable="true"
-            android:stateListAnimator="@animator/press_button_anim">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/black_panther"
-                android:scaleType="centerCrop"/>
-        </androidx.cardview.widget.CardView>
-
-    </GridLayout>
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/main_recycler"
+       android:layout_width="0dp"
+       android:layout_height="0dp"
+       android:layout_margin="16dp"
+       app:layout_constraintTop_toBottomOf="@+id/text_reference"
+       app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent"
+       tools:listitem="@layout/film_item"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
