--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,70 +27,13 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/filmMenu"
+    <FrameLayout
+        android:id="@+id/fragment_placeholder"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="15dp"
-        tools:ignore="MissingConstraints,NotSibling"
-        app:layout_constraintTop_toBottomOf="@id/appTopBar">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layoutAnimation="@anim/layout_animation">
-
-            <ImageView
-                android:id="@+id/draw1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/avengers" />
-
-            <ImageView
-                android:id="@+id/draw3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.7"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/jurasicpark" />
-
-            <ImageView
-                android:id="@+id/draw4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.7"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/pulpfiction" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/text_reference"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autoLink="web"
-        android:linksClickable="true"
-        android:stateListAnimator="@animator/press_button_anim"
-        android:text="Изображения с: https://www.movieposters.com/"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/filmMenu" />
-
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/main_recycler"
-       android:layout_width="0dp"
-       android:layout_height="0dp"
-       android:layout_margin="16dp"
-       app:layout_constraintTop_toBottomOf="@+id/text_reference"
-       app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-       app:layout_constraintLeft_toLeftOf="parent"
-       app:layout_constraintRight_toRightOf="parent"
-       tools:listitem="@layout/film_item"/>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/appTopBar"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        tools:ignore="UnknownId" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
