--- a/app/src/main/res/drawable/corner_background_2.xml
+++ b/app/src/main/res/drawable/corner_background_2.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#F1EFED"
+    <gradient
+        android:angle="45"
         android:endColor="#2C2B2C"
-        android:angle="45" />
-    <corners android:radius="15dp"/>
+        android:startColor="#F1EFED" />
+    <corners android:radius="15dp" />
 </shape>
