--- a/app/src/main/res/drawable/favorites_corner_background.xml
+++ b/app/src/main/res/drawable/favorites_corner_background.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#20E32C"
+    <gradient
+        android:angle="45"
         android:endColor="#29452B"
-        android:angle="45" />
+        android:startColor="#20E32C" />
 </shape>
