--- a/app/src/main/res/drawable/selections_corner_background.xml
+++ b/app/src/main/res/drawable/selections_corner_background.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#0277BD"
+    <gradient
+        android:angle="45"
         android:endColor="#AD1457"
-        android:angle="45" />
+        android:startColor="#0277BD" />
 </shape>
