--- a/app/src/main/res/drawable/watch_later_corner_background.xml
+++ b/app/src/main/res/drawable/watch_later_corner_background.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#3C1002"
+    <gradient
+        android:angle="45"
         android:endColor="#ED6B08"
-        android:angle="45" />
+        android:startColor="#3C1002" />
 </shape>
