--- a/app/src/main/res/layout/fragment_selections.xml
+++ b/app/src/main/res/layout/fragment_selections.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/selections_fragment_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/selections_fragment_root"
     android:background="@drawable/selections_corner_background"
     android:visibility="invisible"
-    tools:visibility="visible"
-    tools:context=".SelectionsFragment">
+    tools:context=".SelectionsFragment"
+    tools:visibility="visible">
 
 </FrameLayout>
