--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="ExtraText">
 
     <item
         android:id="@+id/home"
         android:icon="@drawable/ic_round_home_24"
         android:title="@string/home"
-        app:showAsAction="withText"/>
+        app:showAsAction="withText" />
     <item
         android:id="@+id/favorites"
         android:icon="@drawable/ic_round_thumb_up_24"
         android:title="@string/favorites"
-        app:showAsAction="withText"/>
+        app:showAsAction="withText" />
     <item
         android:id="@+id/watch_later"
         android:icon="@drawable/ic_round_watch_later_24"
         android:title="@string/watch_later"
-        app:showAsAction="withText"/>
+        app:showAsAction="withText" />
     <item
         android:id="@+id/selections"
         android:icon="@drawable/ic_round_category_24"
         android:title="@string/selections"
-        app:showAsAction="withText"/>
+        app:showAsAction="withText" />
 
 </menu>
