module_31_custom_view(rating_donut)

--- a/app/src/main/res/layout/film_item.xml
+++ b/app/src/main/res/layout/film_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="150dp">
 
-    <ru.devambrosov.searchf2.RatingDonutView
+    <ru.devambrosov.searchf2.view.customviews.RatingDonutView
         android:id="@+id/rating_donut"
         android:layout_width="60dp"
         android:layout_height="60dp"
