--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:visibility="invisible"
     tools:background="@drawable/corner_background"
-    tools:context=".HomeFragment"
+    tools:context=".view.fragments.HomeFragment"
     tools:visibility="visible">
 
     <androidx.appcompat.widget.SearchView
