--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/favorites_corner_background"
     android:visibility="invisible"
-    tools:context=".FavoritesFragment"
+    tools:context=".view.fragments.FavoritesFragment"
     tools:visibility="visible">
 
     <androidx.recyclerview.widget.RecyclerView
