--- a/app/src/main/res/layout/fragment_selections.xml
+++ b/app/src/main/res/layout/fragment_selections.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/selections_corner_background"
     android:visibility="invisible"
-    tools:context=".SelectionsFragment"
+    tools:context=".view.fragments.SelectionsFragment"
     tools:visibility="visible">
 
 </FrameLayout>
